# test_task_dev_landing

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  railway.toml
app/: config.py  main.py
app/api/routes/: contact.py  health.py  metrics.py
app/middleware/: error_handler.py  logging.py
app/models/: contact.py
app/services/: ai_service.py  contact_service.py  email_service.py  rate_limiter.py
app/utils/: __init__.py  file_storage.py
