[project]
name = "developer_landing_api"
version = "0.0.1"
description = "Backend API for developer landing page with AI integration"
authors = [
    {name = "Sladkiy-bubalex",email = "shadow.ru_93@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"


[tool.poetry.dependencies]
fastapi = "^0.139.2"
uvicorn = "^0.51.0"
pydantic-settings = "^2.14.2"
python-multipart = "^0.0.32"
python-dotenv = "^1.2.2"
loguru = "^0.7.3"
tenacity = "^9.1.4"
httpx = "^0.28.1"
aiofiles = "^25.1.0"
aiosmtplib = "^5.1.2"
psutil = "^7.2.2"
pydantic = {extras = ["email"], version = "^2.13.4"}
mistralai = "^2.7.1"
black = "^26.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"